--- a/engine/editor/demo.html
+++ b/engine/editor/demo.html
@@ -145,6 +145,7 @@
 		<script src="/ecs/engine/core/joystickControls.js"></script>
 		<script src="/ecs/engine/core/keyboard.js"></script>
 		<script src="/ecs/engine/editor/EditorTab.js"></script>
+		<script src="/ecs/engine/editor/MaterialTab.js"></script>
 
 		<script>
 
