Add material tab (demo.html)

--- a/engine/editor/demo.html
+++ b/engine/editor/demo.html
@@ -124,10 +124,10 @@
 				var cameraTab = TabUI.add( "Camera", "camera-tab" );
 				var controlTab = TabUI.add( "Controls", "control-tab" );
 				var playersTab = TabUI.add( "Players", "players-tab" );
-				var materialTab = TabUI.add( "Materials", "material-tab" );
+				var materialTab = TabUI.add( "Material", "material-tab" );
 				var animationTab = TabUI.add( "Animations", "animation-tab" );
 
-				TabUI.append( "Editor" );
+				TabUI.append( "Editor", "Material" );
 				TabUI.Editor.role.classList.add("active");
 				TabUI.Editor.tab.classList.add("in","active");
 
