--- a/engine/editor/demo.html
+++ b/engine/editor/demo.html
@@ -146,6 +146,7 @@
 		<script src="/ecs/engine/core/keyboard.js"></script>
 		<script src="/ecs/engine/editor/EditorTab.js"></script>
 		<script src="/ecs/engine/editor/MaterialTab.js"></script>
+		<script src="/ecs/engine/editor/MaterialManager.js"></script>
 
 		<script>
 
