--- a/engine/pre-alpha/17/index.html
+++ b/engine/pre-alpha/17/index.html
@@ -149,7 +149,7 @@
 		<script src="/ecs/engine/core/keyboard.js"></script>
 		<script src="/ecs/engine/editor/EditorTab.js"></script>
 		<script src="/ecs/engine/editor/MaterialTab.js"></script>
-	<!-- script src="/ecs/engine/editor/MaterialManager.js"></script -->
+		<script src="/ecs/engine/editor/MaterialManager.js"></script>
 	<!-- script src="/ecs/engine/editor/MaterialEditor.js"></script -->
 
 		<script>
@@ -849,9 +849,8 @@
 */
 		</script>
 
-
 		<script>
-
+/*
 		//	Material Manager Class.
 
 		//	Material Manager: inherits (extends) Array class.
@@ -995,7 +994,7 @@
 
 			const material_entities = new MaterialManager(); // material entities array, important!.
 			const removed_materials = new MaterialManager(); // material entities array, important!.
-
+*/
 		</script>
 
 		<script>
