--- a/engine/editor/demo.html
+++ b/engine/editor/demo.html
@@ -147,6 +147,7 @@
 		<script src="/ecs/engine/editor/EditorTab.js"></script>
 		<script src="/ecs/engine/editor/MaterialTab.js"></script>
 		<script src="/ecs/engine/editor/MaterialManager.js"></script>
+		<script src="/ecs/engine/editor/MaterialEditor.js"></script>
 
 		<script>
 
