--- a/engine/editor/index.html
+++ b/engine/editor/index.html
@@ -117,19 +117,19 @@
 				var sidePanel = createSidePanel();
 				document.body.appendChild( sidePanel );
 
-				var loginTab = TabUI.add( "Login", "login-tab" );
-				var debugTab = TabUI.add( "Debug", "debug-tab" );
-				var levelTab = TabUI.add( "Levels", "level-tab" );
-				var editorTab = TabUI.add( "Editor", "editor-tab" );
-				var cameraTab = TabUI.add( "Camera", "camera-tab" );
-				var controlTab = TabUI.add( "Controls", "control-tab" );
-				var playersTab = TabUI.add( "Players", "players-tab" );
-				var materialTab = TabUI.add( "Material", "material-tab" );
-				var animationTab = TabUI.add( "Animations", "animation-tab" );
+			//	var loginTab = TabUI.add( "Login", "login-tab" );
+			//	var debugTab = TabUI.add( "Debug", "debug-tab" );
+			//	var levelTab = TabUI.add( "Levels", "level-tab" );
+			//	var editorTab = TabUI.add( "Editor", "editor-tab" );
+			//	var cameraTab = TabUI.add( "Camera", "camera-tab" );
+			//	var controlTab = TabUI.add( "Controls", "control-tab" );
+			//	var playersTab = TabUI.add( "Players", "players-tab" );
+			//	var materialTab = TabUI.add( "Material", "material-tab" );
+			//	var animationTab = TabUI.add( "Animations", "animation-tab" );
 
-				TabUI.append( "Editor", "Material" );
-				TabUI.Editor.role.classList.add("active");
-				TabUI.Editor.tab.classList.add("in","active");
+			//	TabUI.append( "Editor", "Material" );
+			//	TabUI.Editor.role.classList.add("active");
+			//	TabUI.Editor.tab.classList.add("in","active");
 
 			})();
 
